# algal-blooms-prediction-back

./: .gitignore  README.md  ocean.sql  pyproject.toml
model/: test_view.ipynb
src/: depends.py  main.py
src/config/: db.py  secret.py
src/ocean/: models.py  router.py  service.py
src/ocean/entity/: models.py  ocean_models.py
src/ocean/mapper/: ocean.py
src/ocean/payload/: ocean.py
src/ocean/repository/: waterline_marine_information.py
