[tool.poetry]
name = "algal-blooms-prediction-back"
version = "0.1.0"
description = ""
authors = ["hyeonproject"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
